<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App Level -->
    <string name="app_name"></string>
    <string name="action_settings"></string>
    <string name="name">Istore</string>

    <!-- Login Page -->
    <string name="title_activity_login_page">LoginPage</string>
    <string name="signWithGmail">Connect with Google</string>
    <string name="signWithFacebook">Connect with Facebook</string>
    <string name="ForgotPassword"><u>Forgot Password </u></string>
    <!-- Home Page -->
    <string name="listmystock">List my Stock</string>
    <string name="viewsolditems">View Sold Items</string>
    <string name="additems">Add items to stock</string>
    <string name="sellitems">Sell Items</string>
    <string name="transactions">Transactions</string>
    <string name="staff">Staff Info</string>
    <string name="stock">Stock Details</string>

    <!-- ListMyStock Page -->
    <string name="noitems">There are no items in the Stock.</string>
    <string name="sortBy">Sort Items</string>
    <string name="search">Search Items</string>

    <!-- Add Item Page -->
    <string name="barcodenoorproductID">Barcode Number/Product ID:</string>
    <string name="Category">Category</string>
    <string name="productName">Product Name:</string>
    <string name="description">Description:</string>
    <string name="quantity">Quantity:</string>
    <string name="minlimit">Min Limit: (Quantity below this will be shown in Out of Stock )</string>
    <string name="quantitytoSell">Quantity To Sell:</string>
    <string name="soldQuan">Quantity Sold:</string>
    <string name="remQuan">Quantity Available:</string>
    <string name="quantitytoAdd">Add Quantity:</string>
    <string name="price">Price Rs:</string>
    <string name="costPrice">Cost Price:</string>
    <string name="sellPrice">Selling Price:</string>
    <string name="supplier">Supplier:</string>
    <string name="captureImage">CAPTURE IMAGE</string>
    <string name="submit">SUBMIT</string>
    <string name="addtostock">ADD TO STOCK</string>
    <string name="cancell">BACK</string>

    <!-- Navigation Drawer Page -->
    <string name="openDrawer">OpenDrawer</string>
    <string name="closeDrawer">CloseDrawer</string>
    <string name="title_activity_add_item_form">AddItemForm</string>

    <!-- FaceBook App Id -->
    <string name="facebook_app_id">365374323640416</string>
    <string name="title_facebook_login">Log in with Facebook</string>

    <!-- Sell Item Page -->
    <string name="sellcart">Sell</string>
    <string name="sell">SELL ITEM</string>
    <string name="addtocart">Add to Cart</string>
    <string name="back">BACK</string>
    <string name="edit">EDIT</string>
    <string name="update">UPDATE</string>
    <string name="title_activity_sold_items">SoldItems</string>
    <string name="title_activity_view_item">ViewItem</string>

    <!-- Home Page Menu Items -->
    <string name="exit">EXIT</string>
    <string name="title_activity_import_data">ImportData</string>
    <string name="title_activity_export_data">ExportData</string>

    <!-- FILE DIALOG -->
    <string name="location">Location</string>
    <string name="cant_read_folder">folder can\'t be read!</string>
    <string name="nnew">New</string>
    <string name="select">Select</string>
    <string name="file_name">File name:</string>
    <string name="cancel">Cancel</string>
    <string name="create">Save</string>
    <string name="no_data">No Data</string>

    <color name="gray">#ffff0000</color>

    <string name="err">Error</string>
    <string name="title_activity_file_dialog">FileDialog</string>
    <string name="hello_world">Hello world!</string>

    <!-- Rupee Symbol -->
    <string name="rs">\u20B9</string>
    <string name="Rs">\u20A8</string>
    <string name="title_activity_view_stock_items">ViewStockItems</string>

    <!-- View Item -->
    <string name="changeImage">Change Image</string>
    <string name="title_activity_edit_item_form">EditItemForm</string>
    <string name="title_activity_sold_item_form">SoldItemForm</string>

    <!-- Google Cloud Print Help -->
    <string name="cloudPrint">https://www.google.com/cloudprint/learn/howitworks.html</string>
    <string name="title_activity_cloud_print">CloudPrint</string>
    <string name="title_activity_print_dialog">PrintDialogActivity</string>
    <string name="title_activity_sign_up">SignUp</string>
    <string name="title_activity_store_name">StoreName</string>
    <string name="title_activity_googleplus">googleplus</string>
    <string name="title_activity_staff_mgnt">StaffMgnt</string>
    <string name="title_activity_supp_info">SuppInfo</string>
    <string name="title_activity_cust_info">CustInfo</string>
    <string name="title_activity_trans">Trans</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_cus_info">ViewCusInfo</string>
    <string name="title_activity_category">Category</string>
    <string name="title_activity_products">Products</string>
    <string name="title_activity_cart">Cart</string>

    <!-- Cart Item -->
    <string name="viewcart">Cart</string>
    <string name="title_activity_total_sales">TotalSales</string>
    <string name="title_activity_today_sales">TodaySales</string>
    <string name="title_activity_out_of_stock">OutOfStock</string>
    <string name="title_activity_total_rev_view_details">TotalRevViewDetails</string>
    <string name="title_activity_filter_by_prod_name">FilterByProdName</string>
    <string name="title_activity_filter_by_staff_id">FilterByStaffId</string>
    <string name="title_activity_trans_staff">TransStaff</string>
    <string name="title_activity_today_sales_staff">TodaySalesStaff</string>
    <string name="title_activity_invoice">Invoice</string>
    <string name="title_activity_staff_mobile">StaffMobile</string>
    <string name="title_activity_forgot_pass">ForgotPass</string>

    <!-- FaceBook Sign in -->
    <string name="com_facebook_loginview_log_in_button">Log In</string>
    <string name="com_facebook_loginview_log_out_button">Log Out</string>
    <string name="title_activity_cust_details_for_sale">CustDetailsForSale</string>
    <string name="title_activity_home_screen">HomeScreen</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_stocks">Stocks</string>
    <string name="title_activity_category_list">CategoryList</string>

</resources>
