<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.istore.bitblue.app.Stocks.Stocks">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_actionbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padd5dp"
            android:layout_marginRight="@dimen/padd5dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:paddingTop="@dimen/padd10dp">


            <Button
                android:id="@+id/b_stocks_list_my_stock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/material_brown_300"
                android:text="@string/listmystock" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padd5dp"
            android:layout_marginRight="@dimen/padd5dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/padd10dp">


            <Button
                android:id="@+id/b_stocks_view_sold_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/material_blue_300"
                android:text="@string/viewsolditems" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padd5dp"
            android:layout_marginRight="@dimen/padd5dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/padd10dp">

            <Button
                android:id="@+id/b_stocks_add_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/material_yellow_300"
                android:text="@string/additems" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padd5dp"
            android:layout_marginLeft="@dimen/padd5dp"
            android:layout_marginRight="@dimen/padd5dp"
            android:layout_weight="1"
            android:paddingTop="@dimen/padd10dp">


            <Button
                android:id="@+id/b_stocks_sell_items"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@color/material_green_500"
                android:text="@string/sellitems" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
