<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.istore.bitblue.app.addItems.AddItems"
    android:background="@color/primary_dark_material_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_actionbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <ScrollView
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/ll_additems_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padd5dp"
                android:layout_marginLeft="@dimen/padd5dp"
                android:layout_marginRight="@dimen/padd5dp"
                android:orientation="vertical"
                android:background="@color/myWindowBackground">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="@dimen/padd5dp"
                    android:layout_marginLeft="@dimen/padd5dp"
                    android:layout_marginRight="@dimen/padd5dp"
                    android:weightSum="2">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/photo"
                        android:layout_weight="1" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/material_grey_500"
                        android:background="@color/myPrimaryColor"
                        android:text="@string/captureImage"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/barcodenoorproductID"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/productName"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400"
                        android:inputType="number" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400"
                        android:inputType="numberDecimal" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/material_blue_300"
                        android:background="@null"
                        android:text="@string/cancel"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/material_blue_300"
                        android:background="@null"
                        android:text="@string/submit"
                        android:textStyle="bold"
                        android:layout_weight="1"
                        android:layout_gravity="center" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
