<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="in.istore.bitblue.app.sellItems.SellItemForm"
    android:background="@color/primary_dark_material_dark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout"
        android:orientation="vertical">

        <include
            android:id="@+id/toolbar_actionbar"
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/ll_sellitems_form"
        android:layout_below="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/myWindowBackground"
        android:layout_marginBottom="50dp">

        <ScrollView
            android:id="@+id/ll_one"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/padd5dp"
                    android:layout_marginLeft="@dimen/padd5dp"
                    android:layout_marginRight="@dimen/padd5dp">

                    <ImageView
                        android:id="@+id/iv_sellitems_image"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/no_image" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd15dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/barcodenoorproductID"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_sellitems_barcode_prod_id"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:textColor="@color/material_dark_teal_A400"
                        android:focusable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/productName"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_sellitems_prod_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400"
                        android:focusable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_sellitems_prod_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400"
                        android:focusable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/quantity"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_sellitems_prod_quantity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400"
                        android:inputType="number"
                        android:focusable="false" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:weightSum="2"
                    android:layout_marginLeft="@dimen/padd15dp"
                    android:layout_marginRight="@dimen/padd15dp"
                    android:layout_marginTop="@dimen/padd5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/price"
                        android:textColor="@color/primary_material_dark"
                        android:layout_weight="1"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/et_sellitems_prod_price"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:singleLine="true"
                        android:layout_weight="1"
                        android:textColor="@color/material_dark_teal_A400"
                        android:inputType="numberDecimal"
                        android:focusable="false" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_marginTop="@dimen/padd5dp"
        android:background="@color/myWindowBackground"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/b_sellitems_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_blue_300"
            android:background="@null"
            android:text="@string/back"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/b_sellitems_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_blue_300"
            android:background="@null"
            android:text="@string/edit"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center" />

        <Button
            android:id="@+id/b_sellitems_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/material_blue_300"
            android:background="@null"
            android:text="@string/sell"
            android:textStyle="bold"
            android:layout_weight="1"
            android:layout_gravity="center" />
    </LinearLayout>

</RelativeLayout>
